Started making changes to allow t5 data to work

--- a/mc_rtt_test.ipynb
+++ b/mc_rtt_test.ipynb
@@ -28,6 +28,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "tt = {}\n",
+    "tt['test'] = 0\n",
+    "tt['tfest'] = 'tet'\n",
+    "with open('test.txt', 'a') as f:\n",
+    "    f.write(tt)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
