--- a/experiments/mc_rtt_test.ipynb
+++ b/experiments/mc_rtt_test.ipynb
@@ -28,6 +28,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = ['test', 'test2', 'test3']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
