--- a/notebooks/cl_alignment.ipynb
+++ b/notebooks/cl_alignment.ipynb
@@ -16,7 +16,15 @@
    ],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "sys.path.append('../')\n",
     "from utils.multisession_utils import align_sessions\n",
@@ -138,36 +146,6 @@
     "# plt.suptitle('All Session Speed Profiles')\n",
     "# plt.tight_layout()\n",
     "# plt.savefig(f'images/all_session_speed_filtered', facecolor='white', transparent=False)\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# n_plots = len(config.data.sessions)\n",
-    "# n_cols = 3\n",
-    "# n_rows = (n_plots // n_cols) + (1 if n_plots % n_cols != 0 else 0)\n",
-    "\n",
-    "# fig, axs = plt.subplots(n_rows, n_cols, figsize=(10, 12), sharex='col', sharey='row')\n",
-    "\n",
-    "# for idx, session in enumerate(config.data.sessions):\n",
-    "#     for cond_id, trials in trialized_data[session]['cl_trial_data'].groupby(('cond_id', 'n')):\n",
-    "#         if cond_id > 0:\n",
-    "#             for trial_id, trial in trials.groupby('trial_id'):\n",
-    "#                 speed = np.linalg.norm(trial.cursor_pos, axis=1)\n",
-    "#                 # speed = np.linalg.norm(trial.cursor_vel, axis=1)\n",
-    "#                 axs.flat[idx].plot(range(0, len(speed)*20, 20), speed, color=f'{colors.rgb2hex(cm.tab10(cond_id))}') #row=0, col=0\n",
-    "#                 axs.flat[idx].set_title(session)\n",
-    "\n",
-    "# for ax in axs.flat: ax.set(xlabel='Time (ms)', ylabel='Cursor Distance')\n",
-    "# for ax in axs.flat: ax.label_outer()\n",
-    "\n",
-    "# plt.suptitle('All Session Normalized Cursor Position Profiles')\n",
-    "# plt.tight_layout()\n",
-    "# plt.savefig(f'images/all_session_norm_pos_filtered', facecolor='white', transparent=False)\n",
     "# plt.show()"
    ]
   },
@@ -13526,7 +13504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
