--- a/notebooks/playground.ipynb
+++ b/notebooks/playground.ipynb
@@ -165,6 +165,24 @@
    "source": [
     "hashlib.md5(f'{test}'.encode()).hexdigest()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test', 'test', 0, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [0, 6]\n",
+    "print(['test', 'test', *test])"
+   ]
   }
  ],
  "metadata": {
